revert ie 11 fix, causing disply issues on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -144,7 +144,7 @@ html, body{
   margin: 0;
   height: 100%;
 	font-family:"Lato", "Helvetica Neue","Open Sans", Arial, sans-serif;
-	@extend .flex,.layout-column;
+	@extend .flex;
 }
 body{
   @extend .background-color-grey, .layout-column;
